--- a/examples/ws.html
+++ b/examples/ws.html
@@ -11,6 +11,7 @@
 <body>
 
     <div id="box">
+        <input type="text" id="room_name">
         <button onclick="connect()"> connect </button>
         <button onclick="disconnect()">disconnect </button>
     </div>
@@ -24,10 +25,13 @@
 
 
         const connect = () => {
-            disconnect();
-            ws = new WebSocket(wsurl);
-            ws.onopen = () => console.log("opened");
-            ws.onmessage = (msg) => console.log(msg.data);
+            let room_name = document.getElementById('room_name').value;
+            if (room_name.length > 0) {
+                disconnect();
+                ws = new WebSocket(wsurl+room_name);
+                ws.onopen = () => console.log("opened");
+                ws.onmessage = (msg) => console.log(msg.data);
+            }
         }
 
         const disconnect = () => {
